<resources>
    <string name="app_name">HikingTracker</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="counter">Counter</string>
    <string name="stop_location_services">Stop Location Services</string>
    <string name="start_button_text">Start Location Recording</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="to_map">To Map</string>
    <string name="to_hikes">To Hike List</string>
</resources>